css/style.css
/* ... */
.space-y-10 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
}

.space-y-5 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
}

.space-y-4 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
}

.bg-lightBrown {
  --tw-bg-opacity: 1;
  background-color: rgb(120 68 33 / var(--tw-bg-opacity));
}

.bg-darkBrown {
  --tw-bg-opacity: 1;
  background-color: rgb(84 67 58 / var(--tw-bg-opacity));
}

.bg-gray-50 {
  --tw-bg-opacity: 1;
  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
}

.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.pt-16 {
  padding-top: 4rem;
}

.text-center {
  text-align: center;
}

.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.leading-9 {
  line-height: 2.25rem;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-grayishBlue {
  --tw-text-opacity: 1;
  color: hsl(201 11% 66% / var(--tw-text-opacity));
}

.duration-200 {
  transition-duration: 200ms;
}

.section-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 72rem;
  padding-left: 2.5rem;
  padding-right: 2.5rem;
  text-align: center;
}

.button-container {
  border-radius: 9999px;
  padding: 1rem;
  padding-left: 2rem;
  padding-right: 2rem;
  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  transition-duration: 200ms;
}

.button-container:hover {
  --tw-translate-y: -0.125rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  opacity: 0.8;
  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.p-details {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 6rem;
  max-width: 48rem;
  text-align: center;
  font-size: 1.5rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: hsl(201 11% 66% / var(--tw-text-opacity));
}

body {
  background: #f8f5f3;
}

footer {
  background: #f8e7d7;
}

.ficon:hover {
  filter: invert(94%) sepia(68%) saturate(54%) hue-rotate(120deg)
    brightness(50%) contrast(34%);
}

.hover\:text-lightBrown:hover {
  --tw-text-opacity: 1;
  color: rgb(120 68 33 / var(--tw-text-opacity));
}

@media (min-width: 768px) {
  .md\:absolute {
    position: absolute;
  }

  .md\:mb-60 {
    margin-bottom: 15rem;
  }

  .md\:mb-0 {
    margin-bottom: 0px;
  }

  .md\:ml-24 {
    margin-left: 6rem;
  }

  .md\:w-1\/2 {
    width: 50%;
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(0px * var(--tw-space-y-reverse));
  }

  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(1rem * var(--tw-space-x-reverse));
    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:space-x-32 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(8rem * var(--tw-space-x-reverse));
    margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:space-x-12 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(3rem * var(--tw-space-x-reverse));
    margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:space-x-24 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(6rem * var(--tw-space-x-reverse));
    margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:pl-16 {
    padding-left: 4rem;
  }

  .md\:text-left {
    text-align: left;
  }
}

